tests/paczka1/fuzzy1/27035786.err
Error in line 1: Vil A669 0,2
Error in line 3: S133 A266 71,1
Error in line 18: Vil S343 369,3
Error in line 22: S133 S133 60,4
Error in line 33: lVBVPEPs59 A266 53,7
Error in line 34: jBzLNW4 S133 17,7
